--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,4 @@ jobs:
         aws-region: eu-west-2
 
     - name: Deploy to S3 bucket
-      run: aws s3 sync . s3://${{ secrets.S3_BUCKET }} --delete --include "*.html"
+      run: aws s3 cp index.html s3://${{ secrets.S3_BUCKET }}
